<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/loginActivityLlTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@drawable/bg_home"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            app:tint="@color/text_color_white" />

        <TextView
            android:id="@+id/loginActivityTv_society_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_logo"
            android:gravity="center"
            android:textColor="@color/textPrimaryColor"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lin_otp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_minus45sdp"
        android:layout_weight="4"
        android:padding="@dimen/_16sdp"
        android:background="@drawable/curved_corner_login"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/OTPDialogFragTvCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:text="+91"
                android:textColor="@color/grey_60"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/OTPDialogFragEt_mobile_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/grey_90"
                android:textColorHint="@color/grey_40"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold">

                <requestFocus />

            </com.google.android.material.textfield.TextInputEditText>


            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/OTPDialogFragIv_truemobile_register"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_check_circle"
                app:tint="@color/colorAccent" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:gravity="center_vertical"
            android:text="@string/otp_verification"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/OTPDialogFragTVRelexWeWillAuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:text="@string/relax_we_will_automatically_validate_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            app:fontFamily="sans-serif-light" />

        <TextView
            android:id="@+id/OTPDialogFragTvPleseEnterOTPBelow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center"
            android:text="@string/please_enter_otp_below"
            android:textSize="@dimen/_10ssp"
            app:fontFamily="sans-serif-light" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/_4sdp" />

        <com.mukesh.OtpView
            android:id="@+id/OTPDialogFragOtp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:itemBackground="@color/grey_10"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/OTPDialogFragTv_coundown_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center"
            android:text="02:00"
            android:textColor="@color/grey_60"
            android:textSize="@dimen/_12ssp"
            app:fontFamily="sans-serif-light" />



        <LinearLayout
            android:id="@+id/OTPDialogFragLlResend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_3sdp"
            android:visibility="visible">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/OTPDialogFragBtn_resend_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/resend_code"
                android:textColor="@color/blue_500" />

            <LinearLayout
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/lin_email_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/OTPDialogFragTvOr1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:visibility="visible" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/OTPDialogFragTvBtn_email_otp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="Email for OTP"
                        android:textColor="@color/blue_500"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/lin_call_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/OTPDialogFragTvOr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="or"
                        android:textColor="@color/black"
                        android:visibility="visible" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/OTPDialogFragTvBtn_call_otp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="Call for OTP"
                        android:textColor="@color/blue_500"
                        android:visibility="visible" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
        

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_setUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-40dp"
        android:layout_weight="4"
        android:background="@drawable/curved_corner_login"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_initial_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Validating Mobile Number"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/ps_int_load"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:padding="@dimen/_16sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-40dp"
        android:layout_weight="4"
        android:background="@drawable/curved_corner_login"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:id="@+id/loginActivityLlSelectSociety"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back_icon"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/round_back_login" />

            <TextView
                android:id="@+id/loginActivityTvSelectOtherBuilding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:text="@string/select_other_building"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <com.ajit.CountryCodePicker
                    app:ccp_setCountryByTimeZone="true"
                    android:id="@+id/loginActivityCcp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_autoDetectCountry="true"
                    android:layout_gravity="center" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/loginActivityEtLoginMobile_Email"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@android:color/transparent"
                    android:digits="0123456789"
                    android:hint="@string/enter_your_mobile_number"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/textPrimaryColor"
                    android:textColorHint="@color/grey_20"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="normal" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@color/grey_20" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/loginActivityBtnLogin"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_gravity="center"
            android:background="@drawable/capsule_shape_colorprimery"
            android:elevation="@dimen/_15sdp"
            android:text="@string/Continue"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

    </LinearLayout>

</LinearLayout>